--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -2,21 +2,21 @@
 {% load static %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"></script>
 
-<!--  left-0 z-40 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white w-80 dark:bg-gray-800" tabindex="-1" aria-labelledby="drawer-label"> -->
+<!--  left-0 z-40 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white w-80 " tabindex="-1" aria-labelledby="drawer-label"> -->
 
 
-<div id='drawer' class="overflow-y-auto h-screen m-4 p-4 fixed top-20 right-0 z-40 max-w-xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+<div id='drawer' class="overflow-y-auto h-screen m-4 p-4 fixed top-20 right-0 z-40 max-w-xl bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex justify-between">
         {% if user.is_authenticated %}
-        <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Close</button>
+        <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">Close</button>
 
-        <button type="button" hx-indicator="#spinner" hx-get="/card/{{id}}/delete" hx-confirm="Are you sure you wish to delete this card?"  hx-target="#drawer" class="m-4 py-2.5  text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-xs px-5 text-center dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Delete Card</button>
+        <button type="button" hx-indicator="#spinner" hx-get="/card/{{id}}/delete" hx-confirm="Are you sure you wish to delete this card?"  hx-target="#drawer" class="m-4 py-2.5  text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-xs px-5 text-center   dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Delete Card</button>
         {% else %}
         <a href="/dashboard/guest/{{workshop_secret}}">
-            <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Close</button>
+            <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">Close</button>
         </a>
         <a href="/user/register/{{workshop_secret}}">
-            <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Create account to edit</button>
+            <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#drawer" class="py-2.5 px-5 m-4 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">Create account to edit</button>
         </a>
         {% endif %}
     </div>
@@ -24,7 +24,7 @@
         {% include "new_title.html" with author=author %}
         
         <div class="p-5">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Author</h5>
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Author</h5>
             
             <div class="p-3">
             <div class="flex items-center justify-between mb-2">
@@ -32,7 +32,7 @@
                     <img class="w-10 h-10 rounded-full" src="{{author.avatar_url}}" alt="{{author.firstname}} {{author.last_name}}">
                 </a>
             </div>
-            <p class="text-base font-semibold leading-none text-gray-900 dark:text-white">
+            <p class="text-base font-semibold leading-none text-gray-900 ">
                 {{author.first_name}} {{author.last_name}}
             </p>
             <p class="mb-3 text-sm font-normal">
@@ -41,13 +41,13 @@
             <ul class="flex text-sm font-light">
                 <li class="mr-2">
                     <a href="{{author.linkedin}}" class="hover:underline">
-                        <span class="font-semibold text-gray-900 dark:text-white"><i class="fa-brands fa-linkedin"></i></span>
+                        <span class="font-semibold text-gray-900 "><i class="fa-brands fa-linkedin"></i></span>
                         <span>{{author.linkedin}}</span>
                     </a>
                 </li>
                 <li>
                     <a href="mailto:{{author.email}}" class="hover:underline">
-                        <span class="font-semibold text-gray-900 dark:text-white"> <i class="fa-solid fa-envelope"></i></span>
+                        <span class="font-semibold text-gray-900 "> <i class="fa-solid fa-envelope"></i></span>
                         <span>{{author.email}}</span>
                     </a>
                 </li>
@@ -55,13 +55,13 @@
         </div>
     <div class="flex">
         <img src="{% static '/icons/participants.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Following </h5> 
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Following </h5> 
     </div>
         <div class="flex -space-x-1 overflow-hidden p-4">
             {% for follower in followers %}
                 <img class="inline-block h-4 w-4 rounded-full ring-2 ring-white" src="{{follower.avatar_url}}" alt="">
                 {% empty %}
-                <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">No followers yet, be the first!</p>
+                <p class="ml-auto text-xs text-gray-500 ">No followers yet, be the first!</p>
             {% endfor %}
         </div> 
         {% if user.is_authenticated%}
@@ -74,19 +74,19 @@
         
         <div class="flex">
             <img src="{% static '/icons/Notes.svg' %}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Notes </h5> 
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Notes </h5> 
         </div>
             {% include "new_description.html" %}
         </div>
     <div class="flex m-4">
         <img src="{% static '/icons/resources.svg' %}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">resources </h5> 
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">resources </h5> 
     </div>
     {% include 'resources.html' with resources=resources id=id %}       
 
     <div class="flex ml-4">
         <img src="{% static '/icons/Update.svg' %}" class="pb-1 h-4 w-4 mr-3 sm:h-9" alt="mapmaker Logo" />
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Updates </h5> 
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Updates </h5> 
     </div>
 
    {% include 'typecomment.html' with comments=comments %}
