--- a/src/card_interactions/templates/create_resource.html
+++ b/src/card_interactions/templates/create_resource.html
@@ -1,18 +1,18 @@
 <!-- Main modal -->
 <div id="createcard" class="object-left w-full h-full max-w-md md:h-auto">
     <!-- Modal content -->
-    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+    <div class="relative bg-white rounded-lg shadow ">
         <button type="button" hx-indicator="#spinner" hx-get="close"  hx-target="#createcard" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white" data-modal-hide="authentication-modal">
             <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
             <span class="sr-only">Close modal</span>
         </button>
         <div class="px-6 py-6 lg:px-8">
-            <h1 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Add new resource</h1>
+            <h1 class="mb-4 text-xl font-medium text-gray-900 ">Add new resource</h1>
             <form action="/card/{{cardid}}/resource/create/" method="post">
                 {% csrf_token %}
                 {{ form }}
                 <!--<input type="submit" value="Submit"> -->
-                <button type="submit" class="w-full my-4 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add new resource</button>
+                <button type="submit" class="w-full my-4 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add new resource</button>
 
             </form>
         
