--- a/src/card_interactions/templates/edit_title.html
+++ b/src/card_interactions/templates/edit_title.html
@@ -1,66 +1,66 @@
 <form hx-post="/card/{{ cardid }}/edit/title/" hx-target="this" hx-indicator="#spinner" hx-swap="outerHTML">
 
     {% if type == 'ambition' %}
-    <div style="background: #000000; color: #fff" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+    <div style="background: #000000; color: #fff" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
         <i class="fa-solid fa-2xl fa-eye"></i><br>
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-white dark:text-white">{{type}}</h5>
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-white ">{{type}}</h5>
         {% csrf_token %}
         <div class="text-black">
         {{ form }}
         </div>
-        <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+        <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
     </div>
     </div>
 {% elif type == 'challenge' %}
-        <div style="background: #E6799D;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div style="background: #E6799D;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-2xl fa-mountain"></i><br>
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 {% csrf_token %}
                 {{ form }}
-                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
             </div>
             </div>
 {% elif type == 'idea' %}
-        <div style="background: #51c1ff;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div style="background: #51c1ff;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-2xl fa-eye"></i><br>
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 {% csrf_token %}
                 {{ form }}
-                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
             </div>
             </div>
 {% elif type == 'pro' %}
-        <div style="background: #ffeb39; " class="w-full max-w bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div style="background: #ffeb39; " class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-circle-up fa-2xl"></i><br>
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 {% csrf_token %}
                 {{ form }}
-                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
 
             </div>
             </div>
 {% elif type == 'con' %}          
-        <div style="background: red;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div style="background: red;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa-circle-down fa-2xl"></i><br>
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 {% csrf_token %}
                 {{ form }}
-                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
             </div>
             </div>
 {% elif type == 'empty' %}          
-        <div style="background: #78E7BF;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div style="background: #78E7BF;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <i class="fa-solid fa- fa-2xl"></i><br>
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">New Card</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">New Card</h5>
                 {% csrf_token %}
                 {{ form }}
-                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+                <button class="my-4 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
             </div>
             </div>
 {% endif %}
