--- a/src/card_interactions/templates/resources.html
+++ b/src/card_interactions/templates/resources.html
@@ -1,6 +1,6 @@
 
 <div id="resources" class="p-4 flow-root">
-    <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+    <ul role="list" class="divide-y divide-gray-200 ">
         {% for resource in resources %}
             <li class="py-3 sm:py-4">
                 <div class="flex items-center space-x-4">
@@ -8,13 +8,13 @@
                         <img class="w-8 h-8 rounded-full" src="https://t2.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url={{resource.document_url}}/&size=64" alt="Resource Logo">
                     </div>
                     <div class="flex-1 min-w-0">
-                        <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                        <p class="text-sm font-medium text-gray-900 truncate ">
                             <a href="{{resource.document_url}}" target="popup">  {{resource.document_description|truncatechars:70}}</a>
                         </p>
-                        <p class="text-xs text-gray-500 dark:text-gray-400">
+                        <p class="text-xs text-gray-500 ">
                             {{resource.date_created}}
                         </p>
-                        <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                        <p class="text-sm text-gray-500 truncate ">
                             <a href="{{resource.document_url}}" target="popup"> {{resource.document_url|truncatechars:50 }} </a>
                         </p>
                        
@@ -22,11 +22,11 @@
                 </a>
                     {% if resource.owner == request.user %}
                     by you
-                            <button type="button" hx-indicator="#spinner" hx-confirm="Are you sure you wish to delete this resource?" hx-target="#resources" hx-swap="outerHTML" hx-DELETE="/card/{{ id }}/resource/{{resource.id}}/delete/" class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                            <button type="button" hx-indicator="#spinner" hx-confirm="Are you sure you wish to delete this resource?" hx-target="#resources" hx-swap="outerHTML" hx-DELETE="/card/{{ id }}/resource/{{resource.id}}/delete/" class="py-2.5 px-5 m-4 mr-2 mb-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700    dark:hover:text-white dark:hover:bg-gray-700">
                                 <i class="fa-regular fa-trash"></i><br> 
                             </button>
                     {% else %}
-                    <div class=" p-2 inline-flex items-center text-base text-gray-900 dark:text-white">
+                    <div class=" p-2 inline-flex items-center text-base text-gray-900 ">
                         {{resource.owner.first_name}} {{resource.owner.last_name}}
                         <div class="flex-shrink-0 p-2">
                             <img class="w-8 h-8 rounded-full" src="{{resource.owner.avatar_url}}" alt="Lana image">
@@ -38,10 +38,10 @@
                 </div>
             </li>
                 {% empty %}
-                <p class="ml-auto text-xs text-gray-500 dark:text-gray-400">No resources, add one!</p>
+                <p class="ml-auto text-xs text-gray-500 ">No resources, add one!</p>
         {% endfor %}        
     </ul>
     {% if user.is_authenticated %}
-    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#modal" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">add  resource</button>
+    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#modal" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">add  resource</button>
     {% endif %}
 </div>
