--- a/src/users/templates/user_profile_table_edit.html
+++ b/src/users/templates/user_profile_table_edit.html
@@ -28,12 +28,12 @@
             
     {% for workshop in workshops %}
     <div class="flex items-center">
-      <input checked id="default-radio-2" type="radio" value="{{workshop.workshop_name}}" name="{{workshop.id}}" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-      <label for="default-radio-2" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">{{workshop.workshop_name}}</label>
+      <input checked id="default-radio-2" type="radio" value="{{workshop.workshop_name}}" name="{{workshop.id}}" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600  focus:ring-2  ">
+      <label for="default-radio-2" class="ml-2 text-sm font-medium text-gray-900 ">{{workshop.workshop_name}}</label>
     </div>
       {% endfor %}
 
   </dd>
 </dl>
-<button class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Save</button>
+<button class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Save</button>
   </form> 
