--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -12,7 +12,7 @@
 	<meta name="keywords" content="Mapmaker workshop online tool netwerk" />
 	<meta name="author" content="Peter van Doorn" />
 	<!--Replace with your tailwind.css once created-->
-
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css" rel="stylesheet" />
 	<link rel="preload" href="{% static '/css/styles.css' %}" as="style">
 	<link rel="stylesheet" href="{% static '/css/styles.css' %}">
 	<!--<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>-->
